# pyth-best-practice

./: .gitignore  Makefile  README.md
deployed/: deploy_id  pyth_best_practice_online-keypair.json
programs/offline/: Cargo.toml
programs/offline/src/: main.rs
programs/online/: Cargo.toml
programs/online/scripts/: invoke.ts  package-lock.json  package.json
programs/online/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
programs/online/tests/: common.rs  loan_to_value.rs  stale_price.rs
status/programs/status/: Cargo.toml
status/programs/status/src/: lib.rs
