[package]
name = "pyth-best-practice"
version = "0.1.0"
description = "Best-practice of Pyth"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "status"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
pyth-sdk-solana = "0.4.1"
